# FastPage

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.arm64  Dockerfile.worker  README.md  RELEASING.md  __init__.py  alembic.ini  ask_pdf.py  config.yaml  page_index.py  pyproject.toml  requirements.txt  run_pageindex.py  test_embedding.py  utils.py
.claude/commands/: dedupe.md
.github/workflows/: autoclose-labeled-issues.yml  backfill-dedupe.yml  issue-dedupe.yml  remove-autoclose-label.yml
app/: main.py  worker.py
app/api/: deps.py
app/core/: auth.py  bootstrap.py  config.py  crypto.py  db.py  errors.py  llm.py  principal.py  request_context.py  url_validator.py
app/models/: __init__.py  api_key.py  chat_run.py  (+20 more)
cookbook/: pageindex_RAG_simple.ipynb
docker/: .env.example  Dockerfile  Dockerfile.arm64  Dockerfile.frontend  README.md  docker-compose.standalone.yml  docker-compose.yml  docker-entrypoint.sh  start.sh  stop.sh  worker-entrypoint.sh
examples/: agentic_vectorless_rag_demo.py
frontend/: .env.example  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
migrations/: env.py
pageindex/: client.py  config.yaml  node_list.json  page_index.py  page_index_md.py  retrieve.py  utils.py
scripts/: autoclose-labeled-issues.js  b4_4_deepseek_direct_probe.py  b4_4_latency_compare.py  b4_4_skill_chat_harness.py  backfill-dedupe.js  comment-on-duplicates.sh  pageindex_export.sh  pageindex_import.sh  pageindex_transfer.sh  verify_llm_registration.py
tests/: test_config_database_mode.py
(+284 files in other folders)
